<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    tools:context=".SetupActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/bg_light_blue"
            android:text="@string/lbl_setup_contract"
			android:textSize="14dp"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_light_yellow"
            android:padding="1dp"
            android:stretchColumns="2" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_setup_wages_hour_x100"
					android:textSize="14dp"/>

                <EditText
                    android:id="@+id/edtHour100"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:gravity="right"
                    android:inputType="number"
					android:textSize="18dp">
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lbl_setup_wages_unit"
					android:textSize="14dp"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingTop="3dp" >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_setup_wages_hour_x125"
					android:textSize="14dp"/>

                <TextView
                    android:id="@+id/lblHour125"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/default_wages_hour_x125"
					android:textSize="14dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lbl_setup_wages_hour_x125_mag"
					android:textSize="14dp"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingTop="3dp" >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_setup_wages_hour_x135"
					android:textSize="14dp"/>

                <TextView
                    android:id="@+id/lblHour135"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/default_wages_hour_x135"
					android:textSize="14dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lbl_setup_wages_hour_x135_mag"
					android:textSize="14dp"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_setup_wages_fare"
					android:textSize="14dp"/>

                <EditText
                    android:id="@+id/edtFare"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:gravity="right"
                    android:inputType="number"
					android:textSize="18dp">
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lbl_setup_wages_unit"
					android:textSize="14dp"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingTop="3dp" >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_setup_wages_prepayment"
					android:textSize="14dp"/>

                <EditText
                    android:id="@+id/edtPrePay"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:gravity="right"
                    android:inputType="number"
					android:textSize="18dp">
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lbl_setup_wages_unit"
                    android:textSize="14dp"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingTop="3dp" >

                <CheckBox
                    android:id="@+id/chkExecPrePay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:text="@string/lbl_setup_prepayment_normally"
					android:textSize="18dp"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/bg_light_blue"
            android:text="@string/lbl_setup_tax"
            android:textSize="14dp"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_light_yellow"
            android:padding="3dp"
            android:stretchColumns="2" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_setup_number_of_family"
                    android:textSize="14dp"/>

                <Spinner
                    android:id="@+id/spnNumOfFamily"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:entries="@array/lbl_setup_familylist"
                    android:textSize="18dp">
                </Spinner>
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/lblPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/bg_light_blue"
            android:text="@string/lbl_setup_period"
			android:textSize="14dp"/>

        <TableLayout
            android:id="@+id/tblPeriod"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_light_yellow"
            android:padding="3dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_setup_valid_period"
                    android:textSize="14dp"/>

                <EditText
                    android:id="@+id/edtPeriodYear"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:gravity="right"
                    android:inputType="number"
                    android:textSize="18dp">
                </EditText>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lbl_setup_period_year"
                    android:textSize="14dp"/>
                <EditText
                    android:id="@+id/edtPeriodMonth"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:gravity="right"
                    android:inputType="number"
                    android:textSize="18dp">
                </EditText>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lbl_setup_period_month"
                    android:textSize="14dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="right">
   	    <Button
   	        android:id="@+id/BtnNG"
    	    style="?android:attr/buttonStyleSmall"
   	        android:layout_width="70dp"
   	        android:layout_height="wrap_content"
   	        android:onClick="BtnNgOnClick"
			android:text="@string/btn_ng"
			android:textSize="14dp"/>
        	    <Button
   	        android:id="@+id/BtnOK"
    	    style="?android:attr/buttonStyleSmall"
   	        android:layout_width="70dp"
   	        android:layout_height="wrap_content"
   	        android:onClick="BtnOkOnClick"
   	        android:text="@string/btn_ok"
   	        android:textSize="14dp"/>

    </LinearLayout>

</RelativeLayout>