<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateActivity">

    <LinearLayout
        android:id="@+id/lstEditDateInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        
	    <TableLayout
	        android:id="@+id/tblDate"
	        android:background="@drawable/bg_white"
    	    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp">

        	<TableRow
            	android:layout_width="match_parent"
	            android:layout_height="wrap_content"
				android:gravity="center_vertical">

        	    <TextView
    	    	    android:layout_width="60dp"
        	    	android:layout_height="wrap_content"
            		android:text="@string/lbl_date"
            		android:textSize="14dp"/>
            
   	   			<TextView
   	   		    	android:id="@+id/lblDate"
	   	   		    android:layout_width="180dp"
   		   		    android:layout_height="25dp"
   	   			    android:paddingLeft="10dp"
   	   			    android:gravity="center_vertical"
   	   		    	android:text="@string/default_lbl_dateA"
	   	   		    android:textSize="20dp" />

    	    </TableRow>

        	<TableRow
	            android:layout_width="match_parent"
    	        android:layout_height="wrap_content" 
        	    android:gravity="center_vertical">
   	   		
	            <TextView
    	            android:id="@+id/lblNote"
        	        android:layout_width="180dp"
            	    android:layout_height="20dp"
   	   		    	android:paddingLeft="10dp"
	   	   		    android:gravity="center_vertical"
	   	   		    android:textSize="14dp"
	   	   		    android:text="@string/default_lbl_nationalday"
    	            android:layout_column="1"/>
            
	   	   	</TableRow>

    	    <TableRow
        	    android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
	            android:gravity="center_vertical">

    	        <TextView
    		        android:layout_width="60dp"
        		    android:layout_height="wrap_content"
            		android:text="@string/lbl_type"
            		android:textSize="14dp"/>
            
	   	   		<TextView
   		   		    android:id="@+id/lblType"
   	   			    android:layout_width="180dp"
   	   			    android:layout_height="20dp"
   	   		    	android:paddingLeft="10dp"
	   	   		    android:gravity="center_vertical"
   		   		    android:text="@string/default_lbl_dateA"
   		   		    android:textSize="14dp"/>

	        </TableRow>

        </TableLayout>
	    <TableLayout
    	    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
    	    android:padding="5dp">

   	    	<TableRow
	        	android:layout_width="match_parent"
	        	android:gravity="center_vertical">
    			<TextView
		    		android:layout_width="60dp"
			    	android:layout_height="wrap_content"
			    	android:text="@string/lbl_stime"
					android:textSize="14dp"/>
	        	    
	        	<TextView
	        		android:id="@+id/lblComeTime"
	        	    android:layout_width="190dp"
	        	    android:layout_height="wrap_content"
   	   		    	android:paddingLeft="10dp"
	        	    android:text="@string/default_lbl_notime"
	        	    android:textSize="20dp"/>

	        	<Button
	    	    	android:id="@+id/btnEditSTime"
    		    	style="?android:attr/buttonStyleSmall"
    		    	android:layout_width="60dp"
		    	    android:layout_height="wrap_content"
    			    android:onClick="EditSTimeOnClick"
    			    android:text="@string/action_settings"
					android:textSize="14dp"/>
    		</TableRow>
	    	<TableRow
		        android:layout_width="match_parent"
		        android:gravity="center_vertical">

		        <TextView
				    android:layout_width="60dp"
    		    	android:layout_height="wrap_content"
				    android:text="@string/lbl_etime"
					android:textSize="14dp"/>
		
	        	<TextView
	        		android:id="@+id/lblLeftTime"
	        	    android:layout_width="190dp"
	        	    android:layout_height="wrap_content"
   	   		    	android:paddingLeft="10dp"
	        	    android:text="@string/default_lbl_notime"
	        	    android:textSize="20dp"/>
        
    			<Button
    	    		android:id="@+id/btnEditETime"
	    	    	style="?android:attr/buttonStyleSmall"
	    		    android:layout_width="60dp"
    			    android:layout_height="wrap_content"
    		    	android:onClick="EditETimeOnClick"
    	    		android:text="@string/action_settings"
					android:textSize="14dp"/>
			</TableRow>
		</TableLayout>
	
    	<CheckBox
        	android:id="@+id/chkPrePayment"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:onClick="ChkPrePaymentOnClick"
        	android:text="@string/lbl_check_prepayment"
			android:textSize="16dp"/>
    	<!-- 
	    <TableLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bg_white"
        	android:padding="5dp"
        	android:gravity="center_horizontal">

 			<TableRow
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content" 
    			android:gravity="center_vertical">

 			    <TextView 
   		        	android:layout_width="60dp"
   	    	    	android:layout_height="wrap_content"
   	        		android:text="@string/lbl_time_fixed_weekday"
   	        		android:textSize="14dp"/>		
 
	   	   		<TextView
   		   	    	android:id="@+id/lblTimeFW"
	   		   	    android:layout_width="80dp"
   		   		    android:layout_height="wrap_content"
	   	   		    android:background="@drawable/bg_time_x100"
					android:text="@string/default_float_zero"
					android:textSize="20dp"
					android:gravity="center"/>
 
	   	   	</TableRow>

 			<TableRow 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content" 
   		    	android:gravity="center_vertical">
    	   	
   	    		<TextView 
   	        		android:layout_width="60dp"
		   	        android:layout_height="wrap_content"
   			        android:text="@string/lbl_time_extra_weekday"
   			        android:textSize="14dp"/>
    	    
	       		<TextView
		           	android:id="@+id/lblTimeEW"
    		        android:layout_width="80dp"
   	    		    android:layout_height="wrap_content"
       	    		android:background="@drawable/bg_time_x125"
					android:text="@string/default_float_zero"
					android:textSize="20dp"
					android:gravity="center"/>

	       	</TableRow>

			<TableRow 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content" 
   		    	android:gravity="center_vertical">

   	   			<TextView 
		       	    android:layout_width="60dp"
    		   	    android:layout_height="wrap_content"
       			    android:text="@string/lbl_time_fixed_holiday"
       			    android:textSize="14dp"/>

		       	<TextView
    		       	android:id="@+id/lblTimeFH"
        		    android:layout_width="80dp"
   	        		android:layout_height="wrap_content"
       	    		android:background="@drawable/bg_time_x125"
					android:text="@string/default_float_zero"
					android:gravity="center"
					android:textSize="20dp"/>
    	   	
			</TableRow>
 			
			<TableRow 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content" 
   		    	android:gravity="center_vertical">

   	   			<TextView 
		       	    android:layout_width="60dp"
    		   	    android:layout_height="wrap_content"
       			    android:text="@string/lbl_time_legal_holiday"
       			    android:textSize="14dp"/>

		       	<TextView
    		       	android:id="@+id/lblTimeLH"
        		    android:layout_width="80dp"
   	        		android:layout_height="wrap_content"
       	    		android:background="@drawable/bg_time_x135"
					android:text="@string/default_float_zero"
					android:gravity="center"
					android:textSize="20dp"/>
    	   	
			</TableRow>
    	</TableLayout>
		-->
 
	    <TableLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/bg_white"
        	android:padding="5dp"
        	android:gravity="center_horizontal">

 			<TableRow
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content" 
    			android:gravity="center_vertical">

 			    <TextView 
   		        	android:layout_width="60dp"
   	    	    	android:layout_height="wrap_content"
   	        		android:text="@string/lbl_time_fixed_weekday"
   	        		android:textSize="14dp"/>		
 
	   	   		<TextView
   		   	    	android:id="@+id/lblFixedWeekday"
	   		   	    android:layout_width="80dp"
   		   		    android:layout_height="wrap_content"
	   	   		    android:background="@drawable/bg_time_x100"
					android:text="@string/default_float_zero"
					android:textSize="20dp"
					android:gravity="center"/>
 			    
   	   			<TextView 
		       	    android:layout_width="60dp"
    		   	    android:layout_height="wrap_content"
    		   	    android:layout_marginLeft="20dp"
       			    android:text="@string/lbl_time_fixed_holiday"
       			    android:textSize="14dp"/>

		       	<TextView
    		       	android:id="@+id/lblFixedHoliday"
        		    android:layout_width="80dp"
   	        		android:layout_height="wrap_content"
       	    		android:background="@drawable/bg_time_x125"
					android:text="@string/default_float_zero"
					android:textSize="20dp"
					android:gravity="center"/>
	   	   		
	   	   		</TableRow>

 			<TableRow 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content" 
   		    	android:gravity="center_vertical">

   	    		<TextView 
   	        		android:layout_width="60dp"
		   	        android:layout_height="wrap_content"
   			        android:text="@string/lbl_time_extra_weekday"
   			        android:textSize="14dp"/>
    	    
	       		<TextView
		           	android:id="@+id/lblExtraWeekday"
    		        android:layout_width="80dp"
   	    		    android:layout_height="wrap_content"
       	    		android:background="@drawable/bg_time_x125"
					android:text="@string/default_float_zero"
					android:gravity="center"
					android:textSize="20dp"/>

			    <TextView 
		       	    android:layout_width="60dp"
    		   	    android:layout_height="wrap_content"
    		   	    android:layout_marginLeft="20dp"
       			    android:text="@string/lbl_time_legal_holiday"
       			    android:textSize="14dp"/>

		       	<TextView
    		       	android:id="@+id/lblLegalHoliday"
        		    android:layout_width="80dp"
   	        		android:layout_height="wrap_content"
       	    		android:background="@drawable/bg_time_x135"
					android:text="@string/default_float_zero"
					android:gravity="center"
					android:textSize="20dp"/>

		       	</TableRow>

			<TableRow 
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content" 
   		    	android:gravity="center_vertical">

    	   	
			</TableRow>
    	</TableLayout>

	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="5dp"
        android:gravity="right">

   	    <Button
   	        android:id="@+id/btnTimeNG"
    	    style="?android:attr/buttonStyleSmall"
   	        android:layout_width="70dp"
   	        android:layout_height="wrap_content"
   	        android:onClick="BtnNgOnClick"
			android:text="@string/btn_ng"
			android:textSize="14dp"/>
   	    <Button
   	        android:id="@+id/btnTimeOK"
    	    style="?android:attr/buttonStyleSmall"
   	        android:layout_width="70dp"
   	        android:layout_height="wrap_content"
   	        android:onClick="BtnOkOnClick"
   	        android:text="@string/btn_ok"
			android:textSize="14dp"/>
   	    </LinearLayout>

</RelativeLayout>